--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.11-SNAPSHOT",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8080 --host 0.0.0.0",
     "build": "vue-cli-service build"
   },
   "explanations-dependencies": {
