--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "roboto-fontface": "Un paquetage simple fournissant la police de caractères Roboto. Utilisé par vuetify et installé lors de son installation"
   },
   "dependencies": {
-    "@mdi/font": "^5.9.55",
+    "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.4.0",
     "axios": "^1.12.2",
-    "pinia": "^2.0.17",
+    "pinia": "^3.0.3",
     "roboto-fontface": "*",
-    "vue": "^2.7.8",
+    "vue": "^3.5.22",
     "vue-json-csv": "^1.2.12",
     "vue-matomo": "^4.2.0",
-    "vue-router": "^3.6.3",
+    "vue-router": "^4.5.1",
     "vue-shortkey": "^3.1.7",
-    "vuetify": "^2.6.0"
+    "vuetify": "^3.10.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~5.0.0",
@@ -30,9 +30,7 @@
     "cypress": "^15.3.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.5.1",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.0"
+    "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
     "> 1%",
