--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "roboto-fontface": "*",
     "vue": "^3.5.22",
     "vue-json-csv": "^2.1.0",
+    "vite": "^7.1.9",
     "vue-matomo": "^4.2.0",
     "vue-router": "^4.5.1",
     "vue-shortkey": "^3.1.7",
@@ -28,8 +29,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "cypress": "^15.3.0",
-    "sass": "^1.93.2",
-    "vite": "^7.1.9"
+    "sass": "^1.93.2"
   },
   "browserslist": [
     "> 1%",
