--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
     "roboto-fontface": "*",
+    "vite": "^7.1.9",
     "vue": "^3.5.22",
     "vue-json-csv": "^2.1.0",
-    "vite": "^7.1.9",
     "vue-matomo": "^4.2.0",
     "vue-router": "^4.5.1",
-    "vue-shortkey": "^3.1.7",
+    "vue3-shortkey": "^4.0.0",
     "vuetify": "^3.10.5"
   },
   "devDependencies": {
