--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -3,14 +3,15 @@ name: 'Create release'
 on:
   workflow_dispatch:
     inputs:
-      releaseVersion:
-        description: 'Version de la release (semver)'
+      versionType:
+        description: 'Quel type de mise à jour ?'
         required: true
-        default: 'x.x.x'
-      snapshotVersion:
-        description: 'Version de snapshot (semver)'
-        required: true
-        default: 'x.x.x-SNAPSHOT'
+        default: 'patch'
+        type: choice
+        options:
+          - major
+          - minor
+          - patch
 
 jobs:
   create-release:
@@ -20,61 +21,103 @@ jobs:
       - name: 'Checkout source code'
         uses: 'actions/checkout@v3'
         with:
-          fetch-depth: '0' # to get all the tags locally
-          # https://stackoverflow.com/questions/67550727/push-event-doesnt-trigger-workflow-on-push-paths-github-actions
+          fetch-depth: '0'
           token: ${{ secrets.TOKEN_GITHUB_FOR_GITHUB_ACTION }}
 
+      - name: "Calculate versions"
+        id: calculate-version
+        run: |
+          versionType="${{ github.event.inputs.versionType }}"
+          latestTag=$(git tag --list --sort=-v:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' | head -n 1)
+          echo "Latest tag: $latestTag"
+
+          if [[ -z "$latestTag" ]]; then
+            echo "No tag found, using 0.0.0 as base"
+            latestTag="0.0.0"
+          fi
+
+          IFS='.' read -r major minor patch <<< "$latestTag"
+
+          if [[ "$versionType" == "major" ]]; then
+            major=$((major + 1))
+            minor=0
+            patch=0
+          elif [[ "$versionType" == "minor" ]]; then
+            minor=$((minor + 1))
+            patch=0
+          else
+            patch=$((patch + 1))
+          fi
+
+          releaseVersion="${major}.${minor}.${patch}"
+          snapshotVersion="${major}.${minor}.$((patch + 1))-SNAPSHOT"
+
+          echo "releaseVersion=$releaseVersion" >> $GITHUB_OUTPUT
+          echo "snapshotVersion=$snapshotVersion" >> $GITHUB_OUTPUT
+
+          echo "New tag: $releaseVersion"
+          echo "New Snapshot tag: $snapshotVersion"
 
       - name: 'Verify release is created only on "main" or "master" git branch'
         run: |
           CURRENT_GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          echo $CURRENT_GIT_BRANCH
+          echo "Current branch: $CURRENT_GIT_BRANCH"
           [[ "$CURRENT_GIT_BRANCH" == "main" || "$CURRENT_GIT_BRANCH" == "master" ]] && exit 0 || exit 1
-      - name: 'Verify version is semver formatted (X.X.X)'
+
+      - name: 'Verify version is correctly formatted (X.X.X)'
         env:
-          NEW_TAG:  ${{ github.event.inputs.releaseVersion }}
-          SNAPSHOT:  ${{ github.event.inputs.snapshotVersion }}
+          NEW_TAG:  ${{ steps.calculate-version.outputs.releaseVersion }}
         run: |
           echo $NEW_TAG | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$'
-          echo $SNAPSHOT | grep -E '^[0-9]+\.[0-9]+\.[0-9]+-SNAPSHOT$'
+
       - name: 'Verify version is not already used as a git tag'
         env:
-          NEW_TAG:  ${{ github.event.inputs.releaseVersion }}
+          NEW_TAG:  ${{ steps.calculate-version.outputs.releaseVersion }}
         run: |
           [[ "$(git tag --list | grep $NEW_TAG)" == "" ]] && exit 0 || exit 1
-      - name: 'Generate the new version (patch few files + git tag)'
+
+      - name: 'Verify snapshot version is formatted (X.X.X-SNAPSHOT)'
         env:
-          NEW_TAG: ${{ github.event.inputs.releaseVersion }}
-          SNAPSHOT:  ${{ github.event.inputs.snapshotVersion }}
+          NEW_SNAPSHOT_TAG: ${{ steps.calculate-version.outputs.snapshotVersion }}
         run: |
-          # préparation de la release qui va :
-          # - modifier le numéro de version dans le package.json du projet (et éventuellement dans le README.md ou d'autres fichiers, cf le sed)
-          # - créer un tag git du numéro de version en question
-          # - pousser le tout sur le dépôt github et faire la fusion avec la branche develop
+          echo $NEW_SNAPSHOT_TAG | grep -E '^[0-9]+\.[0-9]+\.[0-9]+-SNAPSHOT$'
+
+      - name: 'Generate the new version (update files + git tag)'
+        env:
+          NEW_TAG: ${{ steps.calculate-version.outputs.releaseVersion }}
+          NEW_SNAPSHOT_TAG: ${{ steps.calculate-version.outputs.snapshotVersion }}
+        run: |
           git config --global user.email "github-action@noreply"
           git config --global user.name "Github Action"
           npm config set tag-version-prefix ''
           npm config set git-tag-version false
+
+          # set release version
           npm version $NEW_TAG         
-          sed -i "s#Version: [0-9]+\.[0-9]+\.[0-9]+#Version: $NEW_TAG#g" README.md
+          sed -i "s#Version: [0-9]\+\.[0-9]\+\.[0-9]\+\(-SNAPSHOT\)\?#Version: $NEW_TAG#g" README.md
+
           git add .
           git commit -m "Version $NEW_TAG"
           git tag $NEW_TAG
           git push origin $NEW_TAG
           git commit --amend -m "Version $NEW_TAG [skip ci]"
           git push
-          # merge la préparation de la nouvelle version sur develop
-          # (version X.X.X-SNAPSHOT)
+
+          # merge to develop
           git switch develop
           git merge main -m "Merge main to develop [skip ci]"
-          npm version $SNAPSHOT         
-          sed -i "s#Version: [0-9]+\.[0-9]+\.[0-9]+#Version: $SNAPSHOT#g" README.md
+
+          # set snapshot version
+          npm version $NEW_SNAPSHOT_TAG
+          sed -i "s#Version: [0-9]\+\.[0-9]\+\.[0-9]\+\(-SNAPSHOT\)\?#Version: $NEW_SNAPSHOT_TAG#g" README.md
+
           git add .
-          git commit -m "Version $SNAPSHOT [skip ci]"
+          git commit -m "Version $NEW_SNAPSHOT_TAG [skip ci]"
           git push
-      - name: 'Create the github release'
+
+      - name: 'Create the GitHub release'
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.event.inputs.releaseVersion }}
+          tag_name: ${{ steps.calculate-version.outputs.releaseVersion }}
           generate_release_notes: true
           token: ${{ secrets.TOKEN_GITHUB_FOR_GITHUB_ACTION }}
